@@ -118,7 +118,10 @@
                 <version>3.12.1</version>
                 <configuration>
                     <release>21</release>
+                    <source>21</source>
+                    <target>21</target>
                     <enablePreview>true</enablePreview>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
